[package]
name = "longo_snn"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "longo_snn"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28.2"
rand = "0.10.1"
test-case = "3.3.1"
rand_core = "0.10.1"

[dev-dependencies]
test-case = "3.3.1"
